--- a/teste1_kan.ipynb
+++ b/teste1_kan.ipynb
@@ -22,7 +22,7 @@
    "id": "b8b33dd3-8361-4b2a-b6a5-4fb5a6bf1398",
    "metadata": {},
    "source": [
-    "# Pré-processamento dos dados"
+    "# <center>Pré-processamento dos dados</center>"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "id": "c4815e7e-4e41-46c1-be59-12b291473ebb",
    "metadata": {},
    "source": [
-    "# Implementação da arquitetura KAN"
+    "# <center>Implementação da arquitetura KAN</center>"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "id": "ef899577-a89b-4b1d-8e78-5da9c9af9501",
    "metadata": {},
    "source": [
-    "# Métricas de avaliação"
+    "# <center>Métricas de avaliação</center>"
    ]
   },
   {
@@ -432,7 +432,7 @@
    "id": "21104d60-9cc0-43c4-b52a-ea1913c3d70e",
    "metadata": {},
    "source": [
-    "# Vetores dos rótulos verdadeiras e previstos"
+    "# <center>Vetores dos rótulos verdadeiras e previstos</center>"
    ]
   },
   {
